@@ -2,11 +2,13 @@ v1.2.8 (2017.12.xx)
   - Update zlib library to version 1.2.11
   - Update cURL library to version 7.57.0
   - Fix logging of HTTP request errors that occurred during multi-step database queries
+  - Add "Enable verbose discovery data logging" advanced setting
+  - Fix bug causing "Trigger recording discovery immediately after playback" to be applied to "Use network broadcast for device discovery" until restart
 
 v1.2.7 (2017.12.05)
   - Improve handling of in-progress Recorded TV streams that have switched from a live to a recorded state
   - Add support for processing Recorded TV Edit Decision Lists (EDL)
-  - Add "Trigger recording discovery immediately after playback" discovery setting
+  - Add "Trigger recording discovery immediately after playback" setting
 
 v1.2.6 (2017.11.30)
   - Fix forward seeking problems with Live TV streams
